# Streaming-Masked-Superstrings

./: .gitignore  CMakeLists.txt  README.md
cmake/: StandardProjectSettings.cmake
docs/: algorithms.md  design.md
include/algorithm/: approximate_count.hpp  exact.hpp  first_phase.hpp  second_phase.hpp
include/bloom_filter/: bloom_filter.hpp  hash_family.hpp  poly_hash.hpp  rolling_hash.hpp  std_hash.hpp
include/hash/: hash_family.hpp  murmur_hash.hpp  poly_hash.hpp  std_hash.hpp
include/helper/: args.hpp  bitset.hpp  counting_bitset.hpp  hashed_kmer.hpp  kmer.hpp
include/io/: fasta.hpp  streams.hpp
include/math/: modular.hpp
include/sketch/: bloom_filter.hpp  counting_bloom_filter.hpp  hyper_log_log.hpp
src/: CMakeLists.txt  main.cpp
src/algorithm/: CMakeLists.txt  exact.cpp
src/bloom_filter/: CMakeLists.txt  poly_hash.cpp  rolling_hash.cpp
src/hash/: CMakeLists.txt  murmur_hash.cpp  poly_hash.cpp
src/helper/: CMakeLists.txt  args.cpp  bitset.cpp  kmer.cpp
src/io/: CMakeLists.txt  fasta.cpp  streams.cpp
src/math/: CMakeLists.txt  modular.cpp
tests/: CMakeLists.txt
tests/algorithm/: CMakeLists.txt  approximate_count.cpp  hll_test.cpp
tests/bloom_filter/: CMakeLists.txt  benchmark_test.cpp
tests/hash/: CMakeLists.txt  poly_hash_test.cpp
tests/helper/: CMakeLists.txt  fasta_test.cpp  kmer_test.cpp
tests/io/: CMakeLists.txt  fasta_test.cpp
tests/math/: CMakeLists.txt  modulus_test.cpp
